changed to linking to individual trade component files

--- a/Docs/UserGuide/userguide.tex
+++ b/Docs/UserGuide/userguide.tex
@@ -4493,6 +4493,7 @@ Listing \ref{lst:correlation_configuration} shows the configuration of the Corre
 \input{tradedata/tradespecifics}
 
 \input{tradedata/swap}
+\input{tradedata/zerocouponswap}
 \input{tradedata/capfloor}
 \input{tradedata/forwardrateagreement}
 \input{tradedata/swaption}
@@ -4509,7 +4510,23 @@ Listing \ref{lst:correlation_configuration} shows the configuration of the Corre
 \input{tradedata/commodityoption}
 \input{tradedata/commodityforward}
 
-\include{tradecomponents}
+%\include{tradecomponents}
+\input{../../Docs/UserGuide/tradecomponents/tradecomponentsintro}
+\input{../../Docs/UserGuide/tradecomponents/optiondata}
+\input{../../Docs/UserGuide/tradecomponents/legdatanotionals}
+\input{../../Docs/UserGuide/tradecomponents/scheduledata}
+\input{../../Docs/UserGuide/tradecomponents/fixedlegdatarates}
+\input{../../Docs/UserGuide/tradecomponents/floatinglegdata}
+\input{../../Docs/UserGuide/tradecomponents/legdataamortisation}
+\input{../../Docs/UserGuide/tradecomponents/cmsleg}
+\input{../../Docs/UserGuide/tradecomponents/cmsspreadleg}
+\input{../../Docs/UserGuide/tradecomponents/digitalcmsspreadleg}
+\input{../../Docs/UserGuide/tradecomponents/equityleg}
+\input{../../Docs/UserGuide/tradecomponents/cpileg}
+\input{../../Docs/UserGuide/tradecomponents/yyleg}
+\input{../../Docs/UserGuide/tradecomponents/zerocouponleg}
+
+
 \include{allowablevalues}
 
 %========================================================
