updated docs for FX American option

--- a/Docs/UserGuide/tradecomponents.tex
+++ b/Docs/UserGuide/tradecomponents.tex
@@ -133,7 +133,7 @@ FX Option &  \emph{Call}: Bought and Sold currencies/amounts stay as determined 
 \item PayOffAtExpiry [Optional]: Relevant for options with early
   exercise, i.e. the exercise occurs before expiry; \emph{true}
   indicates payoff at expiry, whereas \emph{false}  indicates payoff
-  at exercise. Defaults to \emph{false}  if left blank or omitted. 
+  at exercise. Defaults to \emph{true}  if left blank or omitted. 
 
 Allowable values: \emph{true}, \emph{false}
 %TBC: Do not see payoffatexpiry used in either fxoption or swaption build() functions, to be logged as a bug.       
