--- a/Docs/UserGuide/tradedata/fxoption.tex
+++ b/Docs/UserGuide/tradedata/fxoption.tex
@@ -1,10 +1,10 @@
 \subsubsection{FX Option}
 
 The \lstinline!FXOptionData!  node is the trade data container for the FX Option trade type.  Vanilla FX options are
-supported, the exercise style must be \emph{European}. The strike rate of an FX option is: SoldAmount / BoughtAmount. The
-\lstinline!FXOptionData!  node includes one and only one \lstinline!OptionData! trade component sub-node plus elements
-specific to the FX Option. The structure of an example \lstinline!FXOptionData! node for a FX Option is shown in Listing
-\ref{lst:fxoption_data}.
+supported, the exercise style must be \emph{European} or \emph{American}. The strike rate of an FX option is:
+SoldAmount / BoughtAmount. The \lstinline!FXOptionData!  node includes one and only one \lstinline!OptionData! trade
+component sub-node plus elements specific to the FX Option. The structure of an example \lstinline!FXOptionData! node
+for a FX Option is shown in Listing \ref{lst:fxoption_data}.
 
 \begin{listing}[H]
 %\hrule\medskip
