--- a/Docs/UserGuide/userguide.tex
+++ b/Docs/UserGuide/userguide.tex
@@ -3963,6 +3963,34 @@ and {\tt term}) represents a default value that is used whenever no explicit val
 \label{lst:stress_config}
 \end{longlisting}
 
+%--------------------------------------------------------
+\subsection{Calendar Adjustment: {\tt calendaradjustment.xml}}\label{sec:curveconfig}
+%--------------------------------------------------------
+
+\medskip
+ This file {\tt calendaradjustment.xml} list out all additional holidays and business days that are added to a specified calendar in ORE.
+ These dates would originally be missing from the calendar and has to be added.The general structure is shown in listing \ref{lst:calendar_adjustment}.
+In this example, two additional dates had been added to the calendar "Japan", one addtional holiday and one additional business day. If the user is not certain
+wether the date is already included or not, adding it to the {\tt calendaradjustment.xml} to be safe won't raise any errors.
+A sample {\tt calendaradjustment.xml} file can be found in the Global example input directory. However, it is only used in Example_1.
+
+\begin{longlisting}
+%\hrule\medskip
+  \begin{minted}[fontsize=\scriptsize]{xml}
+<CalendarAdjustments>
+  <Calendar name="Japan">
+    <AdditionalHolidays>
+      <Date>2020-01-01</Date>
+    </AdditionalHolidays>
+    <AdditionalBusinessDays>
+      <Date>2020-01-02</Date>
+    </AdditionalBusinessDays>
+</CalendarAdjustments>
+  \end{minted}
+\caption{Calendar Adjustment}
+\label{lst:calendar_adjustment}
+\end{longlisting}
+
 
 %--------------------------------------------------------
 \subsection{Curves: {\tt curveconfig.xml}}\label{sec:curveconfig}
