--- a/Docs/UserGuide/userguide.tex
+++ b/Docs/UserGuide/userguide.tex
@@ -3964,7 +3964,7 @@ and {\tt term}) represents a default value that is used whenever no explicit val
 \end{longlisting}
 
 %--------------------------------------------------------
-\subsection{Calendar Adjustment: {\tt calendaradjustment.xml}}\label{sec:curveconfig}
+\subsection{Calendar Adjustment: {\tt calendaradjustment.xml}}\label{sec:calenderdjustment}
 %--------------------------------------------------------
 
 \medskip
@@ -3972,7 +3972,7 @@ and {\tt term}) represents a default value that is used whenever no explicit val
  These dates would originally be missing from the calendar and has to be added.The general structure is shown in listing \ref{lst:calendar_adjustment}.
 In this example, two additional dates had been added to the calendar "Japan", one addtional holiday and one additional business day. If the user is not certain
 wether the date is already included or not, adding it to the {\tt calendaradjustment.xml} to be safe won't raise any errors.
-A sample {\tt calendaradjustment.xml} file can be found in the Global example input directory. However, it is only used in Example_1.
+A sample {\tt calendaradjustment.xml} file can be found in the Global example input directory. However, it is only used in Example\_1.
 
 \begin{longlisting}
 %\hrule\medskip
@@ -3987,8 +3987,7 @@ A sample {\tt calendaradjustment.xml} file can be found in the Global example in
     </AdditionalBusinessDays>
 </CalendarAdjustments>
   \end{minted}
-\caption{Calendar Adjustment}
-\label{lst:calendar_adjustment}
+\caption{Calendar Adjustment}\label{lst:calendar_adjustment}
 \end{longlisting}
 
 
