--- a/Docs/UserGuide/allowablevalues.tex
+++ b/Docs/UserGuide/allowablevalues.tex
@@ -106,6 +106,7 @@
     \emph{30/360 (Italian)} & Thirty 360 (Italian) \\ \hline
     \emph{ActActISDA, ActualActual (ISDA), ACT/ACT, ACT} & Actual Actual (ISDA) \\ \hline
     \emph{ActActISMA, ActualActual (ISMA)} & Actual Actual (ISMA) \\ \hline
+    \emph{ActActICMA, ActualActual (ICMA)} & Actual Actual (ICMA) \\ \hline
     \emph{ActActAFB, Actual/Actual (AFB)} & Actual Actual (AFB) \\ \hline           
   \end{tabu}
   \caption{Allowable Values for DayCount Convention}
