--- a/Docs/UserGuide/tradedata/equityforward.tex
+++ b/Docs/UserGuide/tradedata/equityforward.tex
@@ -10,7 +10,7 @@ Listing \ref{lst:eqfwd_data}.
 <EquityForwardData>
   <LongShort>Long</LongShort>
   <Maturity>2018-06-30</Maturity>
-  <Name>ISIN:US78378X1072</Name>
+  <Name>RIC:.SPX</Name>
   <Currency>USD</Currency>
   <Strike>2147.56</Strike>
   <Quantity>17000</Quantity>
@@ -29,7 +29,7 @@ The meanings and allowable values of the elements in the \lstinline!EquityForwar
 	Allowable values: Any date string, see \lstinline!Date! in Table \ref{tab:allow_stand_data}.
 	\item Name: The identifier of the underlying equity or equity index. 
 	
-	Allowable values:  Any string (provided it is the ID of an equity in the market configuration). Typically an ISIN-code with the \emph{ISIN:} prefix.
+	Allowable values:  Any string (provided it is the ID of an equity in the market configuration). Typically a RIC-code with the \emph{RIC:} prefix.
 	\item Currency: The  currency of the equity forward. \\
 	Allowable values:  See \lstinline!Currency! in Table \ref{tab:allow_stand_data}.	
 	\item Strike: The agreed buy/sell price of the equity forward. \\
