--- a/Docs/UserGuide/tradedata/equityoption.tex
+++ b/Docs/UserGuide/tradedata/equityoption.tex
@@ -13,7 +13,7 @@ an example \lstinline!EquityOptionData! node for an equity option is shown in Li
     <OptionData>
       ...
     </OptionData>
-    <Name>ISIN:US78378X1072</Name>
+    <Name>RIC:.SPX</Name>
     <Currency>USD</Currency>
     <Strike>2147.56</Strike>
     <Quantity>17000</Quantity>
@@ -29,7 +29,7 @@ The meanings and allowable values of the elements in the \lstinline!EquityOption
 	\item OptionData: This is a trade component sub-node outlined in section \ref{ss:option_data} Option Data. Note 
 	that the equity option type allows for \emph{European} option style only.	
 	\item Name: The identifier of the underlying equity or equity index. \\
-	Allowable values:  Any string (provided it is the ID of an equity in the market configuration). Typically an ISIN-code with the \emph{ISIN:} prefix.
+	Allowable values:  Any string (provided it is the ID of an equity in the market configuration). Typically a RIC-code with the \emph{RIC:} prefix.
 	\item Currency: The currency of the equity option. \\
 	Allowable values:  See \lstinline!Currency! in Table \ref{tab:allow_stand_data}.	
 	\item Strike: The option strike price.\\
