--- a/Docs/UserGuide/tradecomponents/cpileg.tex
+++ b/Docs/UserGuide/tradecomponents/cpileg.tex
@@ -1,6 +1,11 @@
 \subsubsection{CPI Leg Data}
 \label{ss:cpilegdata}
 
+A CPI leg contains a series of CPI-linked coupon payments $I(t)/I_0\,N\,c\,\delta$ and a final
+inflation-linked redemption $I(t)/I_0\,N$. The final redemption can be
+subtracting the (un-inflated) notional $N$, i.e. $(I(t)/I_0-1)\,N$,
+see below.
+
 Listing \ref{lst:cpilegdata} shows an example for a leg of type CPI. The CPILegData block contains the following
 elements:
 
@@ -13,20 +18,52 @@ Allowable values:  Any string (provided it is the ID of an inflation index in th
  
  Allowable values: Each rate element can take any  real number. The rate is
   expressed in decimal form, e.g. 0.05 is a rate of 5\%.
-\item BaseCPI: The base CPI used to determine the lifting factor for the fixed coupons.
+\item BaseCPI: The base CPI value $I_0$ used to determine the lifting factor for the fixed coupons.
 
 Allowable values:  Any positive real number.
+
+\item StartDate: The start date needs to be provided here, because the payment
+  schedule can be given by a sequence of dates, possibly only a single
+  date, in which case the start date remains unspecified.
+
 \item ObservationLag: The observation lag to be applied.
 
 Allowable values: An integer followed by \emph{D}, \emph{W}, \emph{M} or \emph{Y}. Interpolation lags are typically expressed in \emph{M}, months.
-\item Interpolated: A flag indicating whether interpolation should be applied to inflation fixings. 
 
-Allowable values:  \emph{true, false} 
-\item SubtractInflationNotional [Optional]: A flag indicating whether the non-inflation adjusted notional amount should be subtracted from the the final inflation-adjusted notional exchange at maturity.  Note that the final coupon payment is not affected by this flag. \\ Final notional payment if \emph{true}: $N \frac{CPI_T}{CPI_Base}-N$. \\ If  \emph{false}: $N \frac{CPI_T}{CPI_Base}$ 
+\item Interpolation: A flag indicating whether interpolation should be applied to inflation fixings. 
+
+Allowable values:  \emph{Linear, Flat, AsIndex} 
+
+\medskip
+The latter choice means that the underlying inflation index
+interpolation is applied.
+
+\item SubtractInflationNotional [Optional]: A flag indicating whether
+  the non-inflation adjusted notional amount should be subtracted from
+  the the final inflation-adjusted notional exchange at maturity.
+  Note that the final coupon payment is not affected by this flag. \\ 
+Final notional payment if \emph{true}: $N \,(I(T)/I_0-1)$. \\ 
+Final notional payment if  \emph{false}: $N \,I(T)/I_0$ 
 
 Allowable values:  \emph{true, false} 
 \\Defaults to \emph{false}  if left blank or omitted.
+
+\item Caps [Optional]: This node contains child elements of type
+  \lstinline!Cap! indicating that the inflation indexed payment is
+  capped; the cap is applied to the inflation index and expressed as
+  an inflation rate, see CPI Cap.
+
+\item Floors [Optional]: This node contains child elements of type \lstinline!Floor! indicating that the coupon rate is floored at
+  the given rate (after applying gearing and spread, if any). The mode of specification is analogous to spreads, see
+  above.
+
+\item NakedOption [Optional]: Optional node (defaults to N), if Y the leg represents only the embedded floor, cap or collar. 
+By convention these embedded options are considered long if the leg is a receiver leg, otherwise short. 
+ 
 \end{itemize} 
+
+Whether the leg cotains a final redemption flow at all or not depends on the
+ notional exchange setting, see section \ref{ss:leg_data} and listing \ref{lst:notional_exchange}.
 
 \begin{listing}[H]
 %\hrule\medskip
@@ -60,9 +97,17 @@ Allowable values:  \emph{true, false}
             <Rate>0.02</Rate>
           </Rates>
           <BaseCPI>210</BaseCPI>
+          <StartDate>2016-07-18</StartDate>
           <ObservationLag>2M</ObservationLag>
-          <Interpolated>false</Interpolated>
+          <Interpolation>Linear</Interpolation>
+          <Caps>
+             <Cap>0.03</Cap>
+          </Caps>
+          <Floors>
+            <Floor>0.0</Floor>
+          <Floors>
         </CPILegData>
+        <NakedOption>N</NakedOption>
       </LegData>
 \end{minted}
 \caption{CPI leg data}
