customize OREP test CMakeList, fix a default value

--- a/Docs/UserGuide/tradecomponents/zerocouponleg.tex
+++ b/Docs/UserGuide/tradecomponents/zerocouponleg.tex
@@ -18,7 +18,7 @@ Allowable values: 'Simple' i.e. $(1 + r * t)$, or 'Compounded' i.e. $(1 + r)^t$
   subtracted from the compounding factor,  i.e. $(1 + r * t)  - 1$
   respectively  $(1 + r)^t - 1$, or not, i.e. $(1 + r * t)$  respectively  $(1 + r)^t$
 
-Allowable values: true (Y) or false (N), default is false
+Allowable values: true (Y) or false (N), default is true
 
 \end{itemize}
 
