--- a/Docs/UserGuide/tradedata/equityswap.tex
+++ b/Docs/UserGuide/tradedata/equityswap.tex
@@ -1,6 +1,6 @@
 \subsubsection{Equity Swap}
 
-An Equity Swap is set up as a swap using the {\tt SwapData} node, with one leg of type  \emph{Equity} and one more leg that can be either \emph{Fixed} or  \emph{Floating}. Listing \ref{lst:equityswap} shows an example. The
+An Equity Swap uses its own trade type  {\tt EquitySwap}, but is set up as a swap using the {\tt SwapData} node, with one leg of type  \emph{Equity} and one more leg that can be either \emph{Fixed} or  \emph{Floating}. Listing \ref{lst:equityswap} shows an example. The
 Equity leg contains an additional {\tt EquityLegData} block. See \ref{ss:equitylegdata} for details on the Equity leg specification.
 
 \begin{listing}[H]
