--- a/Docs/UserGuide/tradedata/equityforward.tex
+++ b/Docs/UserGuide/tradedata/equityforward.tex
@@ -29,7 +29,7 @@ The meanings and allowable values of the elements in the \lstinline!EquityForwar
 	Allowable values: Any date string, see \lstinline!Date! in Table \ref{tab:allow_stand_data}.
 	\item Name: The identifier of the underlying equity or equity index. 
 	
-	Allowable values:  Any string (provided it is the ID of an equity in the market configuration). Typically a RIC-code with the \emph{RIC:} prefix.
+	Allowable values:  A RIC-code with the \emph{RIC:} prefix provided it is a RIC-code that is set up in the market configuration. \\
 	\item Currency: The  currency of the equity forward. \\
 	Allowable values:  See \lstinline!Currency! in Table \ref{tab:allow_stand_data}.	
 	\item Strike: The agreed buy/sell price of the equity forward. \\
