--- a/Docs/UserGuide/tradecomponents/equityleg.tex
+++ b/Docs/UserGuide/tradecomponents/equityleg.tex
@@ -11,7 +11,7 @@ Allowable values:  \emph{Price} or  \emph{Total}
 
 \item Name: The identifier of the underlying equity or equity index.
  
- Allowable values: A RIC-code with the \emph{RIC:} prefix provided it is a RIC-code that is set up in the market configuration. \\
+ Allowable values: See \lstinline!Name! for equity trades in Table \ref{tab:equity_credit_data}. \\
 
 \item InitialPrice [Optional]: Initial Price of the equity, if not present, the first valuation date is used to determine the initial price.
 
