fx and eq variance swaps corrected, barrier level specified, commodityfwd corrected and more docs changes

--- a/Docs/UserGuide/tradecomponents/digitalcmsspreadleg.tex
+++ b/Docs/UserGuide/tradecomponents/digitalcmsspreadleg.tex
@@ -56,7 +56,7 @@ Listing \ref{lst:digitalcmsspreadlegdata} shows an example for a leg of type Dig
 The DigitalCMSLegData block contains the following elements:
 
 \begin{itemize}
-\item DigitalCMSLegData: a DigitalCMSSpreadLegData block describing the underlying digital cms spread leg (see \ref{ss:digitalcmsspreadlegdata}.)
+\item CMSLegData: a CMSSpreadLegData block describing the underlying digital cms spread leg (see \ref{ss:cmsspreadlegdata}.)
 \item CallPosition: Specifies whether the call option position is long  or
   short.
 \item IsCallATMIncluded: inclusion flag on the call payoff if the call option ends at-the-money
