--- a/Docs/UserGuide/tradecomponents/optiondata.tex
+++ b/Docs/UserGuide/tradecomponents/optiondata.tex
@@ -59,8 +59,8 @@ FX Options &  \emph{Call}: Bought and Sold currencies/amounts stay as determined
 \item Style: The exercise style of the option. 
 
   Allowable values: \emph{European} or \emph{American} or \emph{Bermudan}. Note that trade type Swaption can have style
-  \emph{European} or \emph{Bermudan}, but not \emph{American}. The FX Option trade type can have style \emph{European}
-  or \emph{American}, but not \emph{Bermudan}.
+  \emph{European} or \emph{Bermudan}, but not \emph{American}.  FX and Equity options trade can have styles \emph{European}
+  or \emph{American}, but not \emph{Bermudan}. 
 
 \item Settlement: Delivery type. 
 
