--- a/Docs/UserGuide/tradecomponents/cmsleg.tex
+++ b/Docs/UserGuide/tradecomponents/cmsleg.tex
@@ -44,6 +44,9 @@ The CMSLegData block contains the following elements:
 
 \begin{itemize}
 \item Index: The underlying CMS index.
+
+Allowable values:  A string on the form CCY-CMS-TENOR, where the CMS part stays constant and TENOR is an integer followed by Y.
+
 \item Spreads [Optional]: The spreads applied to index fixings. As usual, this can be a single value, a vector of values or a dated vector of
   values.
 \item IsInArrears [Optional]:  \emph{true} indicates that  fixing is in arrears, defaults to N
