--- a/Docs/UserGuide/tradecomponents/legdatanotionals.tex
+++ b/Docs/UserGuide/tradecomponents/legdatanotionals.tex
@@ -41,7 +41,8 @@ The meanings and allowable values of the elements in the \lstinline!LegData! nod
 \item LegType:  Determines which of the available sub-nodes must be
   used. 
 
-Allowable values:  \emph{Fixed, Floating, Cashflow, CMS, CMSSpread, DigitalCMSSpread, Equity, YY, CPI, ZeroCouponFixed}
+Allowable values:  \emph{Fixed, Floating, Cashflow, CMS, CMSSpread, DigitalCMSSpread, Equity, CPI, ZeroCouponFixed}
+%YY,
 
 \item Payer:  The flows of the leg are paid to the counterparty if
   \emph{true}, and received if \emph{false}.  
@@ -200,8 +201,8 @@ outlined in section \ref{ss:floatingleg_data} Floating Leg Data and Spreads.
   outlined in section \ref{ss:equitylegdata}.    
 \item CPILegData: This trade component sub-node is required if \lstinline!LegType! is set to \emph{CPI}. It is
   outlined in section \ref{ss:cpilegdata}.
-\item YYLegData: This trade component sub-node is required if \lstinline!LegType! is set to \emph{YY}. It is
-  outlined in section \ref{ss:yylegdata}.
+%\item YYLegData: This trade component sub-node is required if \lstinline!LegType! is set to \emph{YY}. It is
+%  outlined in section \ref{ss:yylegdata}.
 \item ZeroCouponFixedLegData: This trade component sub-node is required if \lstinline!LegType! is set to \emph{ZeroCouponFixed}. It is
   outlined in section \ref{ss:zerolegdata}.
 \end{itemize}
