added that payoffatexpiry must be true for fx touch options

--- a/Docs/UserGuide/tradecomponents/optiondata.tex
+++ b/Docs/UserGuide/tradecomponents/optiondata.tex
@@ -82,7 +82,7 @@ FX Options &  \emph{Call}: Bought and Sold currencies/amounts stay as determined
   indicates payoff at expiry, whereas \emph{false}  indicates payoff
   at exercise. Defaults to \emph{false}  if left blank or omitted. 
 
-Allowable values: \emph{true}, \emph{false}
+Allowable values: \emph{true}, \emph{false} Not that for FxTouchOption, only \emph{true} (payoff at expiry) is supported.
 %TBC: Do not see payoffatexpiry used in either fxoption or swaption build() functions, to be logged as a bug.       
 
 \item ExerciseDates: This node contains child elements of type
