made the trade type name clearer

--- a/Docs/UserGuide/tradedata/capfloor.tex
+++ b/Docs/UserGuide/tradedata/capfloor.tex
@@ -1,6 +1,6 @@
 \subsubsection{Cap/Floor}
 
-The \lstinline!CapFloorData! node is the trade data container for trade type CapFloors.  It's a cap, floor or collar
+The \lstinline!CapFloorData! node is the trade data container for the \emph{CapFloor} trade type.  It's a cap, floor or collar
 (i.e. a portfolio of a long cap and a short floor for a long position in the collar) on a series of Ibor or CMS rates. The
 \lstinline!CapFloorData! node contains a \lstinline!LongShort! sub-node which indicates whether the cap (floor, collar)
 is long or short, and a \lstinline!LegData!  sub-node where the LegType element must be set to \emph{Floating} or \emph{CMS}, plus
